# Test_delivery_service

./: .env  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  create_fastapi_app.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_08_29_1102-4d9d0ad605ec_.py  2024_08_29_1329-e5e0c74a0ee4_.py  2024_08_30_1032-70868c3d14d3_.py  2024_09_05_1138-f59225921426_.py  2024_09_05_2048-08ee08533b97_.py  2024_09_05_2212-1aa43776d673_.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  parcels.py  users.py
app/core/: config.py  db_helper.py
app/crud/: parcels.py  users.py
app/errors/: errors.py
app/models/: base.py  parcels.py  user.py
app/schemas/: parcels.py
app/tasks/: tasks.py  worker.py
app/tests/: conftest.py  test_api.py
app/utils/: get_dollar_rate.py  init_parcels_types.py
grafana_data/: grafana.db
prometheus_data/: prometheus.yml
