[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
orjson = "^3.10.7"
requests = "^2.32.3"
fastapi-cache2 = { extras = ["redis"], version = "^0.2.2" }
dramatiq = { extras = ["rabbitmq"], version = "^1.17.0" }
psycopg2 = "^2.9.9"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"