[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = { extras = ["email"], version = "^2.7.1" }
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
alembic = "^1.13.1"
requests = "^2.32.3"
dramatiq = { extras = ["rabbitmq"], version = "^1.17.0" }
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
cryptography = "^43.0.1"
redis = "^5.0.8"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"